# SWDM

./: README.md
.github/workflows/: dotnet-desktop.yml
c#/kundenverwaltung/: kundenverwaltung.sln
c#/kundenverwaltung/kundenverwaltung/: Form1.Designer.cs  Form1.cs
c#/taschenrechner/taschenrechner/: Form1.Designer.cs  Form1.cs
c++/lottorechner/: CMakeLists.txt
c++/lottorechner/Lotto-Generator/: CMakeLists.txt  Lotto-Generator.cpp  Lotto-Generator.h
c++/rabbat-kategorie-rechner/: rabbat-kategorie-rechner.sln
c++/rabbat-kategorie-rechner/rabbat-kategorie-rechner/: rabbat-kategorie-rechner.cpp  rabbat-kategorie-rechner.vcxproj  rabbat-kategorie-rechner.vcxproj.filters
